<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bbc"
        android:icon="@drawable/bbc"
        android:title="@string/bbc"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/nav_nbc"
        android:icon="@drawable/nbc"
        android:title="@string/nbc"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/nav_cnn"
        android:icon="@drawable/cnn"
        android:title="@string/cnn"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/nav_fox"
        android:icon="@drawable/fox"
        android:title="@string/fox_news"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/nav_espn"
        android:icon="@drawable/espn"
        android:title="@string/espn"
        android:menuCategory="secondary"/>

    <item android:title="@string/upcoming"
        android:menuCategory="secondary">

        <menu>

            <item
                android:id="@+id/nav_NewYorkTimes"
                android:icon="@drawable/newyork"
                android:title="@string/new_york_times"
                android:menuCategory="secondary"/>

        </menu>

    </item>

</menu>